2008-01-17  Nicola Pero  <nicola.pero@meta-innovation.com>

	* GNUstep.sh.in: Removed shebang expressioin '#! /bin/xxx' at the
	beginning of the file to stop package checking systems from
	complaining that this is an executable script installed with the
	wrong permissions (Problem reported by Gareth Armstrong
	<gareth.armstrong@hp.com>).
	* GNUstep.csh.in: Same change.
	* filesystem.sh.in: Same change.
	* filesystem.csh.in: Same change.
	* GNUstep-reset.sh: Same change.
	* ld_lib_path.sh: Same change.
	* ld_lib_path.csh: Same change.
	
2008-01-17  Nicola Pero  <nicola.pero@meta-innovation.com>

	* FilesystemLayouts/fhs-system (GNUSTEP_SYSTEM_DOC_MAN): Changed
	from /man to /share/man.  (GNUSTEP_SYSTEM_DOC_INFO): Changed from
	/info to /share/info (Patch by Gareth Armstrong
	<gareth.armstrong@hp.com>).
	* FilesystemLayouts/fhs-system (GNUSTEP_NETWORK_DOC_MAN,
	GNUSTEP_NETWORK_DOC_INFO, GNUSTEP_LOCAL_DOC_MAN,
	GNUSTEP_LOCAL_DOC_INFO): Similar changes
	* FilesystemLayouts/fhs: Similar changes.
	
2008-01-17  Nicola Pero  <nicola.pero@meta-innovation.com>

	* target.make (SHARED_LIB_LINK_CMD, OBJ_MERGE_CMD): Updated for
	hpux (Patch by Rashmi <rashhegde@gmail.com> with modifications).

2008-01-15  Nicola Pero  <nicola.pero@meta-innovation.com>

	* GNUstep-strict-v2.conf.in: New file which is a "strict
	gnustep-make v2" version of GNUstep.conf.in, with all the obsolete
	v1 variables removed.
	* configure.ac: Create GNUstep-strict-v2.conf file from
	GNUstep-strict-v2.conf.in.
	* configure: Regenerated.
	* GNUmakefile.in: Install GNUstep-strict-v2.conf as configuration
	file instead of GNUstep.conf when running in strict v2 mode.

	* GNUmakefile.in (all): Updated message, mentioning that you need
	to type 'make install' to install.
	(install): Updated message for installing manpages mentioning that
	we are compressing them on the fly.

2008-01-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* GNUmakefile.in: Disable built-in suffixes and vague % rules for